DDF-04288 Fix MenuItem overlap in the Intrigue location dropdown (#4312)

--- a/ui/packages/catalog-ui-search/src/main/webapp/react-component/menu/menu.less
+++ b/ui/packages/catalog-ui-search/src/main/webapp/react-component/menu/menu.less
@@ -21,6 +21,9 @@
     line-height: @minimumButtonSize;
     cursor: pointer;
     .noselect();
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .input-menu-item.is-selected {
